test/libsolidity/syntaxTests/inheritance/override/override_multiple_fail4.sol
contract A {
	function foo() internal returns (uint256);
}
contract X {
	int public override() testvar;
}
// ----
// ParserError: (93-94): Expected identifier but got ')'
